<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ModifyRouteActivity">
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/finalize_route_creation_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|center"
            android:text="Finalizar"
            app:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            style="@style/LargeButtonText"/>

    <fragment
            android:id="@+id/new_route_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainMapActivity"/>

    <Switch
        android:id="@+id/showPOIs_switch_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"
        android:layout_marginTop="35pt"
        android:text="@string/seeSelectedPOIs_switch" />

    <Button
        android:id="@+id/poiUp_button_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65pt"
        android:layout_marginTop="35pt"
        android:clickable="false"
        android:text="@string/poiUp_button"
        android:visibility="invisible" />

    <Button
        android:id="@+id/poiDown_button_modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65pt"
        android:layout_marginTop="60pt"
        android:clickable="false"
        android:text="@string/poiDown_button"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/route_name_textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:hint="Nombre de la ruta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/route_name_textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:id="@+id/marked_pois_list_view"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5pt"
        android:layout_marginLeft="5pt"
        android:layout_marginTop="50pt"
        android:layout_marginEnd="130pt"
        android:layout_marginRight="130pt"
        android:background="#FFFFFF"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/holo_blue_light"
        android:visibility="invisible" />

    <androidx.core.widget.NestedScrollView
            android:id="@+id/user_created_marker_bottom_sheet"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:clipToPadding="true"
            android:background="@color/background"
            android:fillViewport="true">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_created_marker_name_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_point_of_interest_name_text_input_hint"/>
                <Button
                        android:id="@+id/user_created_marker_button"
                        android:text="@string/create_new_point_of_interest_button"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        style="@style/LargeButtonText"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/colorPrimary"
                        android:layout_marginTop="14dp"
                        app:layout_constraintTop_toBottomOf="@+id/user_created_marker_name_text_input" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>