...

    <string name="menu_route_search_fragment_label">Buscar rutas</string>
    <string name="route_search_result_fragment_label">Resultado busqueda</string>

    <!-- Messages displayed to the user. -->
    <string name="route_creation_finalize_title">"Finalizar creación de ruta"</string>
    <string name="route_creation_confirmation_message">"La nueva ruta ha sido guardada satisfactoriamente."</string>
    <string name="route_creation_not_enough_points_message">"No tienes los puntos suficientes para crear la ruta."
    </string>

    <!-- The %1$d represents a String format argument.
    (See: https://stackoverflow.com/questions/3656371/is-it-possible-dynamically-to-add-string-to-string-xml-in-android -->
    <string name="route_creation_summary_message">"El coste de la ruta en creación es de: %1$d puntos"</string>

...
