<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterActivity"
    android:background="@drawable/geometrics_cut">

    <EditText
        android:id="@+id/editTextPasswordConf"
        android:textSize="20sp"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Repita la contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        android:textSize="20sp"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextUsername"
        android:textSize="20sp"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="Nombre de usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextName"
        android:textSize="20sp"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordConf" />

    <EditText
        android:id="@+id/editTextSurname"
        android:textSize="20sp"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Apellidos"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:textSize="20sp"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Correo electrónico"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginBottom="90dp"
        android:text="Registrarse"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"
        style="@style/LargeButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>